[package]
name = "wasmer-host"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-wasi = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta" }
wasmer = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta" }
wasmer-engine-universal = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta" }
wasmer-compiler-cranelift = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta" }
anyhow = "1.0.48"
protocol = { git = "https://github.com/exerum/protocol" }
runtime_registry = { git = "https://github.com/exerum/runtime_registry" }
bincode = "1.3.3"
wasmer-wasi-experimental-network = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta", features = ["runtime-impl"] }